--- a/src-frontend/app/gestionnaires/profile/profile.component.html
+++ b/src-frontend/app/gestionnaires/profile/profile.component.html
@@ -19,8 +19,8 @@
 
       <div class="text-center">
         <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
-        <h6>Upload a different photo...</h6>
-        <input type="file" class="text-center center-block file-upload">
+        <!--<h6>Upload a different photo...</h6>
+        <input type="file" class="text-center center-block file-upload">-->
       </div><br>
 
                
@@ -32,7 +32,7 @@
           
           <ul class="list-group">
             <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
-            <li class="list-group-item "><strong>Shares</strong><span> 125</span></li>
+            <!--<li class="list-group-item "><strong>Shares</strong><span> 125</span></li>-->
            <!-- <li class="list-group-item text-right"><span class="pull-left"><strong>Likes</strong></span> 13</li>
             <li class="list-group-item text-right"><span class="pull-left"><strong>Posts</strong></span> 37</li>
             <li class="list-group-item text-right"><span class="pull-left"><strong>Followers</strong></span> 78</li>-->
@@ -102,7 +102,7 @@
                   <div class="form-group">
                        <div class="col-xs-12">
                             <br>
-                            <button class="btn btn-lg btn-success" type="submit"> Save</button>
+                            <button class="btn btn-lg btn-success" type="submit" href=""> Save</button>
                              <button class="btn" type="reset"> Reset</button>
                             </div>
                       </div>
