--- a/src-frontend/app/gestionnaires/reservations/reservations.component.html
+++ b/src-frontend/app/gestionnaires/reservations/reservations.component.html
@@ -28,6 +28,9 @@
                 <button class="btn btn-primary btn-sm" *ngIf="reservation.etat==='initial'" type="button" [routerLink]="['/AllReservations', reservation.id]" style="margin-top: 5px;">
                     Traiter la demande
                 </button>
+                <button class="btn btn-primary btn-sm" *ngIf="reservation.etat==='validée' || reservation.etat==='rejetée'" type="button" [routerLink]="['/AllReservations', reservation.id]" style="margin-top: 5px;">
+                    Détail
+                </button>
                 </td>
               </tr>
             </tbody>
