--- a/src-frontend/app/header/header.component.html
+++ b/src-frontend/app/header/header.component.html
@@ -3,6 +3,9 @@
       <a href="#" class="navbar-brand">
           <img src="..\assets\images\logoAgadir.jpg" alt="" width="50" height="50">
       </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
   </div>
   <div class="col-xs-4 mb-0">
       <nav class="navbar navbar-left navstyle mb-0">
