--- a/src-frontend/app/demandeur/demande/demande-detail/demande-detail.component.html
+++ b/src-frontend/app/demandeur/demande/demande-detail/demande-detail.component.html
@@ -53,3 +53,5 @@
       </tr>
     </tbody>
   </table>
+  <button type="button" (click)="downloadFile();">Download</button>
+  <button type="button" class="btn btn-danger" (click)="downloadFile()"  data-toggle="tooltip" data-placement="top" title="rejeter la réservation" >rejeter</button>
