--- a/src-frontend/app/demandeur/demande/demande-formulaire/demande-formulaire.component.html
+++ b/src-frontend/app/demandeur/demande/demande-formulaire/demande-formulaire.component.html
@@ -65,13 +65,13 @@
                                   </select>
                         </div>
                             <div class="form-group col-md-5" style="padding-top: 1%;padding-left: 2%;">
-                               <b> choisir la date de réservation :</b>
+                               <b> choisir la date de réservation : </b>
                             </div>
                             <div class="form-group col-md-7">
-                                <input type="date" name="dateReservation" max="2025-12-31" min="1000-01-01" class="form-control" formControlName="dateReservation" required>
+                                <input type="date" name="dateReservation" max="2025-12-31" min="2020-5-25" class="form-control" formControlName="dateReservation" required>
                             </div>
                             <div class="form-group col-md-5" style="padding-top: 1%;padding-left: 2%;">
-                                <b> Description :</b>
+                                <b> Description : </b>
                              </div>
                         <div class="form-group col-md-12">
                                   <textarea id="description" name="description" cols="40" rows="10" class="form-control" formControlName="description" required></textarea>
@@ -92,10 +92,30 @@
                     </div>-->
                     
                     <div class="form-row">
-                        <button type="submit" class="btn btn-danger">Submit</button>
+                        <button type="submit" class="btn btn-danger" class="btn btn-primary" data-toggle="modal" href="#exampleModal">Submit</button>
                     </div>
-                </form>
+                  </form>
             </div>
         </div>
+    </div>            
+    <!-- Modal -->
+<div class="modal " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">demande</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{message}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      <!--  <button type="button" class="btn btn-primary">Save changes</button>-->
+      </div>
     </div>
+  </div>
+</div>
 </section>
