--- a/src-frontend/app/demandeur/demande/demande-summary/demande-summary.component.html
+++ b/src-frontend/app/demandeur/demande/demande-summary/demande-summary.component.html
@@ -5,7 +5,7 @@
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
           <button class="btn btn-link" data-toggle="collapse" [attr.data-target] = "'#collapse'+ demande.id" aria-expanded="true" aria-controls="collapseOne">
-            <h4>{{demande.id}}</h4>
+            <h4>{{demande.objet}}</h4>
           </button>
         </h5>
       </div>
