--- a/src-frontend/app/demandeur/demandeur-profile/demandeur-profile.component.html
+++ b/src-frontend/app/demandeur/demandeur-profile/demandeur-profile.component.html
@@ -134,9 +134,9 @@
                       <div class="form-group">
                            <div class="col-xs-12">
                                 <br>
-                              	<button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                              	<button class="btn btn-lg btn-success" type="submit" href=""><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
                                	<button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
-                                <button class="btn btn-lg btn-success" (click)="afficher()">afficher</button>
+                                <!--<button class="btn btn-lg btn-success" (click)="afficher()">afficher</button>-->
                             </div>
                       </div>
               	</form>
