--- a/src-frontend/app/gestionnaires/reservations/reservation-unit/reservation-unit.component.html
+++ b/src-frontend/app/gestionnaires/reservations/reservation-unit/reservation-unit.component.html
@@ -38,18 +38,29 @@
             <th scope="row">Description :</th>
             <td>{{reservation.demande.description}}</td>
           </tr>
+          <tr *ngIf="reservation.etat==='validée' || reservation.etat==='rejetée'"  >
+            <th scope="row">Commentaire :</th>
+            <td>
+                <textarea name="comment" cols="30" rows="5" id="comment" [ngModel]="reservation.commentaire" class="form-control" formControlName="comment" required></textarea>
+            </td>
+          </tr>       
           <tr>
+            <th>l'obligation légalisée :</th>
+            <td>       
+              <pdf-viewer [src]="obligation" [render-text]="true" style="display: block;" ></pdf-viewer>
+            </td>
+          </tr>
+          <tr *ngIf="reservation.etat==='initial'" >
             <th scope="row">Commentaire :</th>
             <td>
                 <textarea name="comment" cols="30" rows="5" id="comment" [(ngModel)]="comment" class="form-control" formControlName="comment" required></textarea>
             </td>
-          </tr>
         </tbody>
       </table>
 
    <br><br>
 <div style="text-align: center;">
-    <button type="submit" class="btn btn-success"  data-toggle="tooltip" data-placement="top" title="valider la réservation">Valider</button>&nbsp;
-    <button type="button" class="btn btn-danger" (click)="rejeter(comment)"  data-toggle="tooltip" data-placement="top" title="rejeter la réservation">rejeter</button>
+    <button type="submit" class="btn btn-success"  data-toggle="tooltip" data-placement="top" title="valider la réservation" *ngIf="reservation.etat==='initial'" >Valider</button>&nbsp;
+    <button type="button" class="btn btn-danger" (click)="rejeter(comment)"  data-toggle="tooltip" data-placement="top" title="rejeter la réservation" *ngIf="reservation.etat==='initial'" >rejeter</button>
 </div>
 </form>
