--- a/src-frontend/app/list-equipements/equipement-detail/equipement-detail.component.html
+++ b/src-frontend/app/list-equipements/equipement-detail/equipement-detail.component.html
@@ -48,7 +48,7 @@
     </div>
         <div>
             <!-- google maps.  -->
-            <google-map></google-map>
+            <!-- <google-map></google-map> -->
         </div>
         <div class="card-footer">
         </div>
