--- a/src-frontend/app/demandeur/demande/demande-formulaire/demande-formulaire.component.html
+++ b/src-frontend/app/demandeur/demande/demande-formulaire/demande-formulaire.component.html
@@ -10,9 +10,8 @@
                     <div class="card-body">
                         <img src="http://www.ansonika.com/mavia/img/registration_bg.svg" style="width:30%">
                         <h2 class="py-3">Remplir ma demade</h2>
-                        <p>Tation argumentum et usu, dicit viderer evertitur te has. Eu dictas concludaturque usu,
-                             facete detracto patrioque an per, lucilius pertinacia eu vel.
-                        </p>
+                        <b>Pour bien completer votre demande avec succés, vous devrez remplir tous les champs 
+                        </b>
                     </div>
                 </div>
             </div>
@@ -58,17 +57,14 @@
                         </div>
                         <div class="form-group col-md-6">
                                   <select id="equipement" class="form-control" formControlName="equipement" required>
-                                    <option value="1" selected> Khair eddin</option>
-                                    <option value="2"> tasila</option>
-                                    <option value="3"> tikiwin</option>
-                                    <option value="4"> anza</option>
+                                    <option *ngFor="let e of equipements" [value]="e.id" selected> {{e.nom}} </option>
                                   </select>
                         </div>
                             <div class="form-group col-md-5" style="padding-top: 1%;padding-left: 2%;">
                                <b> choisir la date de réservation : </b>
                             </div>
                             <div class="form-group col-md-7">
-                                <input type="date" name="dateReservation" max="2025-12-31" min="2020-5-25" class="form-control" formControlName="dateReservation" required>
+                                <input type="date" name="dateReservation" [min]="date" max="2025-12-31" class="form-control" formControlName="dateReservation" required>
                             </div>
                             <div class="form-group col-md-5" style="padding-top: 1%;padding-left: 2%;">
                                 <b> Description : </b>
