--- a/src-frontend/app/demandeur/demande/demande-unit/demande-unit.component.html
+++ b/src-frontend/app/demandeur/demande/demande-unit/demande-unit.component.html
@@ -18,7 +18,7 @@
             <td>
                 <button type="button" class="btn btn-sm btn-success" *ngIf="reservation.etat==='validée'" >{{reservation.etat}} </button>
                 <button type="button" class="btn btn-sm btn-danger" *ngIf="reservation.etat==='rejetée'" >{{reservation.etat}} </button>
-                <button type="button" class="btn btn-info-outline btn-sm" *ngIf="reservation.etat==='initial'" >{{reservation.etat}} </button>
+                <button type="button" class="btn btn-info-outline btn-sm" *ngIf="reservation.etat==='initial' || reservation.etat==='en train de traitement'" >{{reservation.etat}} </button>
                
             </td>
           </tr>
