--- a/src-frontend/app/footer/footer.component.html
+++ b/src-frontend/app/footer/footer.component.html
@@ -1,5 +1,10 @@
 <footer class="py-3">
     <div class="container">
-        <div class="small text-center">Copyright © 2020</div>
+        <div class="small text-center">
+            <span *ngIf="authservice.isloggedIn()">Copyright 2020</span>
+            <span *ngIf="authservice.isloggedIn()">ENSA AGADIR</span>
+            <a routerLink="/admin/auth" class="nav-link" *ngIf="!authservice.isloggedIn()">Sign In</a>
+            <a routerLink="/auth/division/signup" class="nav-link" *ngIf="!authservice.isloggedIn()">Sign Up</a>
+    </div>
     </div>
 </footer>
