decideur + modifications sur Demandeur&Gestionnaire

--- a/src-frontend/app/demandeur/demande/demande-detail/demande-detail.component.html
+++ b/src-frontend/app/demandeur/demande/demande-detail/demande-detail.component.html
@@ -18,8 +18,12 @@
         <td>{{reservation.etat}}</td>
       </tr>
       <tr>
-        <th scope="row">la date de réservation :</th>
-        <td>{{formatDate(reservation.demande.dateReservation)}}</td>
+        <th scope="row">la date de début réservation :</th>
+        <td>{{formatDate(reservation.demande.dateDebutReservation)}}</td>
+      </tr>
+      <tr>
+        <th scope="row">la date de Fin réservation :</th>
+        <td>{{formatDate(reservation.demande.dateFinReservation)}}</td>
       </tr>
       <tr>
         <th scope="row">L'équipement désiré :</th>
