--- a/src-frontend/app/header/header.component.html
+++ b/src-frontend/app/header/header.component.html
@@ -11,14 +11,18 @@
       <nav class="navbar navbar-left navstyle mb-0">
           <a routerLink="/home" class="nav-link" *ngIf="!authservice.isloggedIn()">Home</a>
           <a routerLink="/actualite" class="nav-link" *ngIf="!authservice.isloggedIn()">Actualite</a>
-          <a routerLink="/equipements" class="nav-link" >Listes des equipements</a>
-          <a routerLink="/demandeurProfile" class="nav-link" *ngIf="authservice.isDemandeur()">Mon Profile</a>
+          <a routerLink="/equipements" class="nav-link" *ngIf="!authservice.isDecideur()">Listes des equipements</a>
+          <a routerLink="/demandeur/profile/view" class="nav-link" *ngIf="authservice.isDemandeur()">Mon Profile</a>
           <a routerLink="/mesDemandes" class="nav-link" *ngIf="authservice.isDemandeur()">Mes demandes</a>
           <a routerLink="/AddDemande" class="nav-link" *ngIf="authservice.isDemandeur()">Créer une demande</a>
-          <a routerLink="/gestionnaireProfile" class="nav-link" *ngIf="authservice.isGestionnaire()">Mon profile</a>
+          <a routerLink="gestionnaire/profile-view" class="nav-link" *ngIf="authservice.isGestionnaire()">Mon profile</a>
           <a routerLink="/AllReservations" class="nav-link" *ngIf="authservice.isGestionnaire()">Réservations</a>
           <a routerLink="/AllAutorisations" class="nav-link" *ngIf="authservice.isGestionnaire()">Autorisations</a>
           <a routerLink="/demandeurs" class="nav-link" *ngIf="authservice.isGestionnaire()">Les Demandeurs</a>
+          <a routerLink="/decideurs/demandes" class="nav-link" *ngIf="authservice.isDecideur()">Demandes</a>
+          <a routerLink="/decideurs/autorisations" class="nav-link" *ngIf="authservice.isDecideur()">Autorisations</a>
+          
+
       </nav>
   </div>
   
