--- a/src-frontend/app/demandeur/demande/demande-unit/demande-unit.component.html
+++ b/src-frontend/app/demandeur/demande/demande-unit/demande-unit.component.html
@@ -10,8 +10,12 @@
             <td>{{formatDate(demande.dateDemande)}}</td>
           </tr>
           <tr>
-            <th scope="row">La date de réservation :</th>
-            <td>{{formatDate(demande.dateReservation)}}</td>
+            <th scope="row">la date de début réservation :</th>
+            <td>{{formatDate(demande.dateDebutReservation)}}</td>
+          </tr>
+          <tr>
+            <th scope="row">la date de Fin réservation :</th>
+            <td>{{formatDate(demande.dateFinReservation)}}</td>
           </tr>
           <tr>
             <th scope="row">L'état de demande :</th>
