--- a/src-frontend/app/gestionnaires/profile/profile.component.html
+++ b/src-frontend/app/gestionnaires/profile/profile.component.html
@@ -102,7 +102,7 @@
                   <div class="form-group">
                        <div class="col-xs-12">
                             <br>
-                            <button class="btn btn-lg btn-success" type="submit" href=""> Save</button>
+                            <button class="btn btn-lg btn-success" type="submit"  data-toggle="modal" href="#exampleModal"> Save</button>
                              <button class="btn" type="reset"> Reset</button>
                             </div>
                       </div>
@@ -114,5 +114,25 @@
             
         </div><!--/col-9-->
         
+            <!-- Modal -->
+<div class="modal " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">demande</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{message}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" href="">Close</button>
+      <!--  <button type="button" class="btn btn-primary">Save changes</button>-->
+      </div>
+    </div>
+  </div>
+</div>
     </div><!--/row-->
                                                       
